simplek8s/polls-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polls-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: polls-container
          image: anreddy/polls_sqlite
          ports:
            - containerPort: 8080
