simplek8s/nginx-port.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-node-port
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 80
      nodePort: 31516
  selector:
    component: web-nginx
