simplek8s/polls_cluster_ip_service.yml
apiVersion: v1
kind: Service
metadata:
  name: polls-cluster-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 9000
      targetPort: 8000
