simplek8s/polls_port.yml
apiVersion: v1
kind: Service
metadata:
  name: polls-node-port
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 8000
      nodePort: 31515
  selector:
    component: web
