simplek8s/ingress-service.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: igress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: polls-cluster-service
              servicePort: 9000
